; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_functioncmds.c_interpret_func_support.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_functioncmds.c_interpret_func_support.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTERNALOID = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_UNDEFINED_FUNCTION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"function %s does not exist\00", align 1
@NIL = common dso_local global i32 0, align 4
@ERRCODE_INVALID_OBJECT_DEFINITION = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"support function %s must return type %s\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"internal\00", align 1
@ERRCODE_INSUFFICIENT_PRIVILEGE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [48 x i8] c"must be superuser to specify a support function\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @interpret_func_support to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @interpret_func_support(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [1 x i64], align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @defGetQualifiedName(i32* %6)
  store i32* %7, i32** %3, align 8
  %8 = load i64, i64* @INTERNALOID, align 8
  %9 = getelementptr inbounds [1 x i64], [1 x i64]* %5, i64 0, i64 0
  store i64 %8, i64* %9, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [1 x i64], [1 x i64]* %5, i64 0, i64 0
  %12 = call i64 @LookupFuncName(i32* %10, i32 1, i64* %11, i32 1)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @OidIsValid(i64 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %26, label %16

16:                                               ; preds = %1
  %17 = load i32, i32* @ERROR, align 4
  %18 = load i32, i32* @ERRCODE_UNDEFINED_FUNCTION, align 4
  %19 = call i32 @errcode(i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = load i32, i32* @NIL, align 4
  %22 = getelementptr inbounds [1 x i64], [1 x i64]* %5, i64 0, i64 0
  %23 = call i32 @func_signature_string(i32* %20, i32 1, i32 %21, i64* %22)
  %24 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = call i32 @ereport(i32 %17, i32 %24)
  br label %26

26:                                               ; preds = %16, %1
  %27 = load i64, i64* %4, align 8
  %28 = call i64 @get_func_rettype(i64 %27)
  %29 = load i64, i64* @INTERNALOID, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %31, label %39

31:                                               ; preds = %26
  %32 = load i32, i32* @ERROR, align 4
  %33 = load i32, i32* @ERRCODE_INVALID_OBJECT_DEFINITION, align 4
  %34 = call i32 @errcode(i32 %33)
  %35 = load i32*, i32** %3, align 8
  %36 = call i32 @NameListToString(i32* %35)
  %37 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i32 %36, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  %38 = call i32 @ereport(i32 %32, i32 %37)
  br label %39

39:                                               ; preds = %31, %26
  %40 = call i32 (...) @superuser()
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %48, label %42

42:                                               ; preds = %39
  %43 = load i32, i32* @ERROR, align 4
  %44 = load i32, i32* @ERRCODE_INSUFFICIENT_PRIVILEGE, align 4
  %45 = call i32 @errcode(i32 %44)
  %46 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.3, i64 0, i64 0))
  %47 = call i32 @ereport(i32 %43, i32 %46)
  br label %48

48:                                               ; preds = %42, %39
  %49 = load i64, i64* %4, align 8
  ret i64 %49
}

declare dso_local i32* @defGetQualifiedName(i32*) #1

declare dso_local i64 @LookupFuncName(i32*, i32, i64*, i32) #1

declare dso_local i32 @OidIsValid(i64) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, ...) #1

declare dso_local i32 @func_signature_string(i32*, i32, i32, i64*) #1

declare dso_local i64 @get_func_rettype(i64) #1

declare dso_local i32 @NameListToString(i32*) #1

declare dso_local i32 @superuser(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
